k8s/overlays/staging/patches/ingress.yaml
# Patch staging — host específico do ambiente
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-amazonas-pires
spec:
  rules:
    - host: staging.hospital-amazonas-pires.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hospital-amazonas-pires
                port:
                  number: 80
